--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:ignore="MissingDefaultResource">
 
     <!--Todo 1-->
@@ -19,6 +20,7 @@
         android:text="@string/tv_title01"
         android:textAlignment="center"
         android:textSize="84dp"
+        android:textColor="@color/olympus_blue"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="109dp" />
 
