--- a/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/app/src/main/res/layout-xlarge/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:ignore="MissingDefaultResource">
 
     <!--Todo 1-->
@@ -60,6 +61,7 @@
         android:text="@string/tv_title01"
         android:textAlignment="center"
         android:textSize="80dp"
+        android:textColor="@color/olympus_blue"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="109dp" />
 
