--- a/app/src/main/res/layout/fragment_current_list.xml
+++ b/app/src/main/res/layout/fragment_current_list.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/olympus_blue">
 
         <Spinner
             android:id="@+id/sptype07"
@@ -11,10 +12,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"/>
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView
     android:id="@+id/lvCurrent"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:divider="@drawable/list_divider">
 
 </ListView>
 </LinearLayout>
