--- a/app/src/main/res/layout/fragment_disposed_list.xml
+++ b/app/src/main/res/layout/fragment_disposed_list.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/olympus_blue">
 
         <Spinner
             android:id="@+id/sptype08"
@@ -10,9 +11,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"/>
 
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView
     android:id="@+id/lvDisposed"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:divider="@drawable/list_divider">
 </ListView>
 </LinearLayout>
