--- a/app/src/main/res/layout/row_sheet_current_list.xml
+++ b/app/src/main/res/layout/row_sheet_current_list.xml
@@ -8,7 +8,8 @@
         android:id="@+id/tv_current_name07"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textColor="@color/white"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,15 +17,18 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_current_num_sub07"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="@string/tv_current_number"/>
+            android:text="@string/tv_current_number"
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/tv_current_number07"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:textSize="20dp"/>
+            android:textSize="20dp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 </LinearLayout>
