--- a/app/src/main/res/layout/row_sheet_disposed_list.xml
+++ b/app/src/main/res/layout/row_sheet_disposed_list.xml
@@ -8,7 +8,8 @@
         android:id="@+id/tv_disposed_name08"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:textColor="@color/white"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -16,15 +17,18 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_disposed_date_sub08"
             android:layout_width="98dp"
             android:layout_height="wrap_content"
             android:text="@string/tv_disposed_date_disposed"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:textColor="@color/white"/>
         <TextView
             android:id="@+id/tv_disposed_date08"
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:textSize="18dp"/>
+            android:textSize="18dp"
+            android:textColor="@color/white"/>
 
     </LinearLayout>
 </LinearLayout>
