--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#FFEFEFEF</color>
+    <color name="olympus_blue">#FF08107B</color>
+    <color name="olympus_yellow">#FFDFD226</color>
 </resources>
